# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  03 Oct 2004; <genone@gentoo.org> cnf/*, man/emerge.1, man/make.conf.5, 
  man/portage.5, pym/emergehelp.py:
  Changed documentation to use --action instead of action (bug #2365). 
  Also changed ufed references in make.conf to use the correct category.

  30 Sep 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Rsync fix part 2
  for the distfiles, local, and packages directory unlinks.
  
  30 Sep 2004; Nicholas Jones <carpaski@gentoo.org> emerge-webrsync: Fix for
  the missing md5sum causing failure to download. Fixed up a couple messages.
  Modified the local rsync line.
  
  30 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Make more of
  the chown calls friendly. More output on strange exceptions in aux_get.
  
  30 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_db_template.py:
  Added some more putput to the corruption message.

  29 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> output.py: Added unicode-rxvt
  to the list of legal term types. #65762

  28 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> etc-update: Added patch to
  use gsed on BSD from bug 60721.

*portage-2.0.51_rc6 (26 Sep 2004): RC + Lock cleanup, Happy RC #2

  26 Sep 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Restart fix for
  the -a into execv code.
  
  26 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_locks.py: Fixed
  a traceback for Fat32 users.

*portage-2.0.51_rc5 (26 Sep 2004): RC + Lock cleanup, Happy RC #1

  26 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_data.py: Fixed
  the BSD lchown issues.

  26 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Added the